--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "bun run tsc -b && bun run vite build",
     "lint": "bun run eslint .",
     "preview": "bun run vite preview",
-    "start": "bun run vite preview --host"
+    "start": "bun run server.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
